# designer

./: .clang_complete  .gitignore  README.md  build.sh  contributing.md  meson.build  test.sh
src/: app.cpp  app.h  app.hpp  build_info.hpp  detect_os.hpp  types.hpp
src/core/: open_file.hpp
src/ui/: designer_ui.cpp  designer_ui.h  designer_ui.hpp  designer_window.hpp  ui_impl.cpp  window.hpp
src/ui/gtk/: designer_window.hpp  window_impl.hpp
